[gd_scene load_steps=3 format=3 uid="uid://celksweh11svb"]

[ext_resource type="Texture2D" uid="uid://b5uo5w1qw76gn" path="res://assets/slot.png" id="2_n87q4"]
[ext_resource type="Script" path="res://prefabs/inventory/slot_inventory.gd" id="3_foho1"]

[node name="slot" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -740.0
offset_bottom = -340.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_foho1")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n87q4")
expand_mode = 1

[node name="sprite" type="TextureRect" parent="."]
clip_contents = true
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 13.0
offset_right = 14.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="amount" type="Label" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 33.0
offset_top = 30.0
offset_right = 49.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 7
horizontal_alignment = 2
vertical_alignment = 2

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 19.0
offset_right = 51.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 8
disabled = true
text = "Usar"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
